--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "cypress": "^14.5.4"
+    "axe-core": "^4.10.3",
+    "cypress": "^14.5.4",
+    "cypress-axe": "^1.7.0",
+    "cypress-plugin-tab": "^1.0.5",
+    "cypress-real-events": "^1.15.0"
   }
 }
